2009-06-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*.py: Added support for updating the photo list
	  periodically.
	* photoframe.py (PopUpMenu): Set the sensitiveness of
	  the menu item 'open'.

2009-06-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, base.py: Added new class PhotoImage in
	  photoframe.py for memory saving.

2009-05-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr.py (PhotoSourceTumblrUI): Fixed bugs.
	* photoliststore.py, photoframe.py, base.py: Improved the timer
	  implementation.  Added next_photo (restart timer).

2009-05-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Improved plugin imports.
	* gphotoframe.glade, base.py: Added mnemonics.
	* preferences.py (PreferencesTreeView): Truncate long arguments on
	  Photo Source TreeView.

2009-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py: Changed API name labels.

2009-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py: Added support for Picasa Web Album.
	* keyring.py: Added support for GNOME Keyring.

2009-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, gphotoframe.glade, ja.po, plugins/*:
	  Added plugin preferences.

2009-05-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Fixed the plugins path.

2009-05-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Initial import (issue #12).
	* tumblr.py: Initial import (issue #11).
	* *: Code refactoring.

2009-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.2.1 release.
	* setup.py: Set the permission for data_files (issue #8).

2009-05-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.2 release.
	* autostart.py: Fixed bugs for non-install mode.
	* photoframe.py (PhotoFrame.set_photo): Fixed tooltips for
	  photo information.

2009-05-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (PhotoDialog.run): Delete disused arguments.
	* photoframe.py, plugins/*.py: Code refactoring.